implement all missing operations
